# percolate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README-public.md  README.md  README.rtf  package-info.json  package-info.json.in
.github/workflows/: main.yml
docs/: JC_rev~.maxref.xml  N_rev~.maxref.xml  PRC_rev~.maxref.xml  absmax~.maxref.xml  absmin~.maxref.xml  agogo~.maxref.xml  bamboo~.maxref.xml  bandedWG~.maxref.xml  blotar~.maxref.xml  blow_botl~.maxref.xml  blow_hole~.maxref.xml  bowedbar~.maxref.xml  bowed~.maxref.xml  brass~.maxref.xml  cabasa~.maxref.xml  casey~.maxref.xml  chase~.maxref.xml  clar~.maxref.xml  curvesmooth~.maxref.xml  dcblock~.maxref.xml  escal~.maxref.xml  flapper~.maxref.xml  flip~.maxref.xml  flute~.maxref.xml  gQ~.maxref.xml  gen10.maxref.xml  gen17.maxref.xml  gen20.maxref.xml  gen24.maxref.xml  gen25.maxref.xml  gen5.maxref.xml  gen7.maxref.xml  gen9.maxref.xml  guiro~.maxref.xml  jitter~.maxref.xml  klutz~.maxref.xml  mandolin~.maxref.xml  marimba~.maxref.xml  mesh2D~.maxref.xml  metashaker~.maxref.xml  (+34 more)
examples/: percolate.module.pitchtracker.maxhelp  percolate.module.pitchtracker.maxpat
extras/: PeRColate.maxpat  PeRColate_overview.maxpat  PeRColate_overview.pat
help/: JC_rev~.help  N_rev~.help  PRC_rev~.help  absmax~.help  absmax~.maxhelp  absmin~.help  absmin~.maxhelp  agogo~.help  agogo~.maxhelp  bamboo~.help  bamboo~.maxhelp  bandedWG~.help  bandedWG~.maxhelp  blotar~.help  blotar~.maxhelp  blow_botl~.help  blow_botl~.maxhelp  blow_hole~.help  blow_hole~.maxhelp  bowedbar~.help  bowedbar~.maxhelp  bowed~.help  bowed~.maxhelp  brass~.help  brass~.maxhelp  cabasa~.help  cabasa~.maxhelp  casey~.help  casey~.maxhelp  chase~.help  chase~.maxhelp  clar~.help  clar~.maxhelp  curvesmooth.help  curvesmooth~.help  curvesmooth~.maxhelp  dcblock~.help  dcblock~.maxhelp  escal~.help  escal~.maxhelp  (+133 more)
help/nbody_help/: abreu1.pict  abreu10.pict  abreu11.pict  abreu12.pict  abreu2.pict  abreu3.pict  abreu4.pict  abreu5.pict  abreu6.pict  abreu7.pict  abreu8.pict  abreu9.pict  abreupictlist  abreupnglist.txt  fiddle test  fiddle1.pict  fiddle10.pict  fiddle11.pict  fiddle12.pict  fiddle2.pict  fiddle3.pict  fiddle4.pict  fiddle5.pict  fiddle6.pict  fiddle7.pict  fiddle8.pict  fiddle9.pict  fiddlepictlist  fiddlepnglist.txt  fiddles  fiddleviewtest  guitars  nbody~.help  nbody~.maxhelp  view.maxpat  violin1.pict  violin10.pict  violin11.pict  violin12.pict  violin2.pict  (+10 more)
help/nbody_help/CVS.sandboxinfo/: CVS
init/: percolate-init.txt
patchers/: percolate.About.maxpat  percolate.AudioFX.maxpat  percolate.Foley.maxpat  percolate.Generators.maxpat  percolate.Miscellaneous.maxpat  percolate.PitchedPercussion.maxpat  percolate.Shakers.maxpat  percolate.StringandHybrid.maxpat  percolate.Utilities.maxpat  percolate.WindInstruments.maxpat
source/PeRColate_includes/: JCRev.h  Mesh2D.h  PRCRev.h  Shakers.h  marmstk1.h  stk.c  stk_c.h
source/PeRColate_includes/src/: BeeThree.cpp  Chorus.cpp  Filter.cpp  PitShift.cpp  TwoZero.cpp  VoicForm.cpp  WvIn.cpp
source/PeRColate_source/: README.rtf  buildit.sh
source/PeRColate_source/JC_rev~/: Info.plist  JC_rev~.xml
source/PeRColate_source/N_rev~/: Info.plist  N_rev~.xml
source/PeRColate_source/absmax~/: Info.plist  absmax~.c
source/PeRColate_source/absmin~/: Info.plist  absmin~.c  absmin~.xml
source/PeRColate_source/agogo~/: Info.plist  agogo~.xml  rand.c
source/PeRColate_source/bamboo~/: Info.plist  bamboo~.c  bamboo~.xml
source/PeRColate_source/bandedWG~/: Info.plist  bandedWG~.cpp  bandedWG~.xml
source/PeRColate_source/blotar~/: Info.plist  blotar~.c  blotar~.xml
source/PeRColate_source/blow_botl~/: Info.plist  blow_botl~.xml
source/PeRColate_source/blow_hole~/: Info.plist  blow_hole~.xml
source/PeRColate_source/bowedbar~/: Info.plist  bowedbar~.c  bowedbar~.xml
source/PeRColate_source/bowed~/: Info.plist  bowed~.c  bowed~.xml
source/PeRColate_source/brass~/: Info.plist  brass~.xml
source/PeRColate_source/cabasa~/: Info.plist  cabasa~.c  cabasa~.xml
source/PeRColate_source/casey~/: Info.plist
source/PeRColate_source/chase~/: Info.plist  chase~.c  chase~.xml
source/PeRColate_source/clar~/: Info.plist  clar~.c  clar~.xml
source/PeRColate_source/curvesmooth~/: Info.plist  curvesmooth~.xml
source/PeRColate_source/dcblock~/: Info.plist  dcblock~.c  dcblock~.xml
source/PeRColate_source/escal~/: Info.plist  escal~.c  escal~.xml
source/PeRColate_source/flapper~/: Info.plist  flapper~.c  flapper~.xml
source/PeRColate_source/flip~/: Info.plist  flip~.c  flip~.xml
source/PeRColate_source/flute~/: Info.plist  flute~.c  flute~.xml
source/PeRColate_source/ftom~/: ftom~.c  (+2 more)
source/include/: NRev.h  PoleZero.h  Shakers.h  Stk.h  WvIn.h  mandimpulses.h  marmstk1.h  sinewave.h  stat.h  stk copy.c  stk.c  stk_c.h
source/projects/: percolate.sln
source/projects/N_rev~/: CMakeLists.txt  N_rev~.cpp  N_rev~.vcxproj
source/projects/N_rev~/N_rev~.xcodeproj/: project.pbxproj
source/projects/blow_hole~/: CMakeLists.txt  blow_hole~.cpp  blow_hole~.vcxproj
source/projects/blow_hole~/blow_hole~.xcodeproj/: project.pbxproj
source/projects/gen24/: CMakeLists.txt  gen24.c  gen24.vcxproj
source/projects/gen24/gen24.xcodeproj/: project.pbxproj
source/projects/pit_shift~/: CMakeLists.txt  pit_shift~.cpp  pit_shift~.vcxproj
source/projects/pit_shift~/pit_shift~.xcodeproj/: project.pbxproj
source/projects/prc_fm~/: CMakeLists.txt  prc_fm~.cpp  prc_fm~.vcxproj
source/projects/prc_fm~/prc_fm~.xcodeproj/: project.pbxproj
source/projects/prc_rev~/: CMakeLists.txt  prc_rev~.cpp  prc_rev~.vcxproj
source/projects/prc_rev~/prc_rev~.xcodeproj/: project.pbxproj
source/projects/simple~/: CMakeLists.txt  simple~.cpp  simple~.vcxproj
source/projects/simple~/simple~.xcodeproj/: project.pbxproj
source/projects/sitar~/: CMakeLists.txt  sitar~.cpp  sitar~.vcxproj
source/projects/sitar~/sitar~.xcodeproj/: project.pbxproj
source/projects/voice_form~/: CMakeLists.txt  voice_form~.cpp  voice_form~.vcxproj
source/projects/voice_form~/voice_form~.xcodeproj/: project.pbxproj
(+653 files in other folders)
